--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.38'
     compile 'org.hibernate:hibernate-core:5.1.0.Final'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
 
 }
 
