--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -10,3 +10,7 @@ mailserver.host = localhost
 mailserver.port = 4555
 mailserver.adminlogin = root
 mailserver.adminpassword = root
+
+mantis.URL = http://localhost/mantisbt-1.2.19/api/soap/mantisconnect.php
+mantis.admin = administrator
+mantis.password = root
